added canvas code

--- a/test.html
+++ b/test.html
@@ -3,3 +3,10 @@
 <body>
 The moon is made of cheese, however I find myself unable to taste it.
 </body>
+
+<body>
+    <h1>Man, I wish I had some random dots in this box.</h1>
+    <canvas id ="clusterCanvas"></canvas>
+    <button id ="startButton">Start Clustering</button>
+    <script src="script.ts"></script>
+</body>
