--- a/test.html
+++ b/test.html
@@ -1,11 +1,14 @@
-<!HTML>
-
+<!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="style.css">
+    
+</head>
 <body>
 The moon is made of cheese, however I find myself unable to taste it.
 </body>
 
 <body>
-    <h1>Man, I wish I had some random dots in this box.</h1>
+    <h1>Man, I wish I had some random dots in this box. HI AIKO</h1>
     <canvas id ="clusterCanvas"></canvas>
     <button id ="startButton">Start Clustering</button>
     <script src="script.ts"></script>
