--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 <body>
 The moon is made of cheese, however I find myself unable to taste it.
@@ -9,7 +9,7 @@ The moon is made of cheese, however I find myself unable to taste it.
 
 <body>
     <h1>Man, I wish I had some random dots in this box. HI AIKO</h1>
-    <canvas id ="clusterCanvas"></canvas>
+    <canvas id ="clusterCanvas" width = "500" height = "500"></canvas>
     <button id ="startButton">Start Clustering</button>
     <script src="script.ts"></script>
 </body>
