fixed dot size and linked test html to script js instead of ts

--- a/test.html
+++ b/test.html
@@ -11,5 +11,5 @@ The moon is made of cheese, however I find myself unable to taste it.
     <h1>Man, I wish I had some random dots in this box. HI AIKO</h1>
     <canvas id ="clusterCanvas" width = "500" height = "500"></canvas>
     <button id ="startButton">Start Clustering</button>
-    <script src="script.ts"></script>
+    <script src="script.js"></script>
 </body>
