centered div for cluster box and shtuff

--- a/test.html
+++ b/test.html
@@ -9,7 +9,9 @@ The moon is made of cheese, however I find myself unable to taste it.
 
 <body>
     <h1>Man, I wish I had some random dots in this box. HI AIKO</h1>
-    <canvas id ="clusterCanvas" width = "500" height = "500"></canvas>
+    <div class = "cluster-box">
+        <canvas id ="clusterCanvas" width = "500" height = "500"></canvas>
+    </div>
     <button id ="startButton">Start Clustering</button>
     <script src="script.js"></script>
 </body>
